--- a/notebooks/3-1_exercise.ipynb
+++ b/notebooks/3-1_exercise.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>GESIS Summer School in Survey Methodology 2018:<br> Meta-Analysis in Social Research and Survey Methodology<span class=\"tocSkip\"></span></h1>"
+    "<h1>A two-day workshop at the DJI, Munich 2019:<br> Meta-Analysis in Social Research<span class=\"tocSkip\"></span></h1>"
    ]
   },
   {
@@ -344,7 +344,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.5.1"
+   "version": "3.6.1"
   },
   "toc": {
    "base_numbering": 1,
