--- a/notebooks/1-2_exercise.ipynb
+++ b/notebooks/1-2_exercise.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>A two-day workshop at the DJI, Munich 2019:<br> Meta-Analysis in Social Research<span class=\"tocSkip\"></span></h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "toc": true
    },
@@ -332,7 +339,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.5.1"
+   "version": "3.6.1"
   },
   "toc": {
    "base_numbering": 1,
